--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ configurations {
 
 def versionOverrides = [
     'commons-lang:commons-lang'     : '2.4',
+    'commons-logging:commons-logging'     : '1.1.3',
+    'org.apache.httpcomponents:httpclient': '4.3',
     'org.codehaus.groovy:groovy-all': '2.2.2',
     'org.hamcrest:hamcrest-core'    : '1.3',
     'org.slf4j:slf4j-api'           : '1.6.6',
